--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Neon Lights</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <script type="text/javascript" src="warpspeed.min.js"></script>
     </head>
     <body>
         <h1>Hello!</h1>
@@ -10,6 +11,11 @@
         <div id="progressBar"></div>
         <div id="scrollPath"></div>
         <div id="percent"></div>
+
+        <div style="position:fixed; z-index:0; top:0; left:0; width:100%; height:100%;">
+		    <canvas id="canvas" style="width:100%; height:100%;"></canvas>
+		    <script type="text/javascript">new WarpSpeed("canvas");</script>
+	    </div>
         
         <script type="text/javascript">
             let progressBar = document.getElementById("progressBar");
