--- a/index.html
+++ b/index.html
@@ -5,32 +5,34 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="warpspeed.min.js"></script>
     </head>
+
     <body>
         <div id="progressBar"></div>
         <div id="scrollPath"></div>
-        <div id="percent"></div>
 
         <div style="position:fixed; z-index:0; top:0; left:0; width:100%; height:100%;">
-		    <canvas id="canvas" style="width:100%; height:100%;"></canvas>
-		    <script type="text/javascript">new WarpSpeed("canvas");</script>
-	    </div>
-        
+            <canvas id="canvas" style="width:100%; height:100%;"></canvas>
+            <script type="text/javascript">
+                new WarpSpeed("canvas");
+            </script>
+        </div>
+
         <script type="text/javascript">
-            let progressBar = document.getElementById("progressBar");
-            let totalHeight = document.body.scrollHeight - window.innerHeight;
+            var progressBar = document.getElementById("progressBar");
+            var totalHeight = document.body.scrollHeight - window.innerHeight;
 
             window.onscroll = function() {
-                let progress = (window.pageYOffset / totalHeight) * 100;
+                var progress = (window.pageYOffset / totalHeight) * 100;
                 progressBar.style.height = progress + "%";
             }
         </script>
 
-        <a href="#">
+        <a href="javascript:
+            console.log(Math.random())">
             <span></span>
             <span></span>
             <span></span>
-            <span></span>
-            Click me!
+            <span></span> Click me!
         </a>
     </body>
 </html>
